Daisy/NVMe/M.2_SSD/Daisy_NVMe_M.2_19.1/ps.sdk/.metadata/.plugins/org.eclipse.cdt.ui/nvme_m2_bsp_xgpio_intr_tapp_example_1.build.log
15:28:16 **** Build of configuration Debug for project nvme_m2_bsp_xgpio_intr_tapp_example_1 ****
make all 
'Building file: ../src/xgpio_intr_tapp_example.c'
'Invoking: ARM v8 gcc compiler'
aarch64-none-elf-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xgpio_intr_tapp_example.o" -I../../nvme_m2_bsp/psu_cortexa53_0/include -MMD -MP -MF"src/xgpio_intr_tapp_example.d" -MT"src/xgpio_intr_tapp_example.o" -o "src/xgpio_intr_tapp_example.o" "../src/xgpio_intr_tapp_example.c"
../src/xgpio_intr_tapp_example.c: In function 'main':
../src/xgpio_intr_tapp_example.c:92:33: error: 'XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR' undeclared (first use in this function); did you mean 'XPAR_FABRIC_XDMA_0_INTERRUPT_OUT_INTR'?
  #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xgpio_intr_tapp_example.c:92:33: note: in definition of macro 'INTC_GPIO_INTERRUPT_ID'
  #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xgpio_intr_tapp_example.c:92:33: note: each undeclared identifier is reported only once for each function it appears in
  #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xgpio_intr_tapp_example.c:92:33: note: in definition of macro 'INTC_GPIO_INTERRUPT_ID'
  #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [src/subdir.mk:23: src/xgpio_intr_tapp_example.o] Error 1

15:28:17 Build Finished (took 948ms)

